优化strategy
