# src/modules/strategies/dto/latest-signal.dto.ts
@@ -1,0 +1,6 @@
+export class LatestSignalDto {
+  limit?: number = 10;
+  strategyCode?: string;
+  symbol?: string;
+  allowOnly?: boolean;
+}
